--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -8,3 +8,6 @@ $on-bigphone:         375px;
 $on-tablet:           768px;
 $on-laptop:           960px;
 $on-desktop:          1200px;
+/* Site logo */
+$site-logo-width: 75px !default;
+$site-logo-height: 75px !default;
