--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -168,7 +168,6 @@ figcaption {
 
 .site-logo-img {
   height: 100%;
-  border: 5px solid;
-  border-radius: $site-logo-width;
   margin: auto;
+  max-height: 38px;
 }
